--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -583,6 +583,10 @@ video {
   right: 3rem;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
 .right-4{
   right: 1rem;
 }
@@ -599,6 +603,10 @@ video {
   top: 50%;
 }
 
+.top-2{
+  top: 0.5rem;
+}
+
 .top-28{
   top: 7rem;
 }
@@ -609,6 +617,10 @@ video {
 
 .top-8{
   top: 2rem;
+}
+
+.top-\[160\%\]{
+  top: 160%;
 }
 
 .z-10{
@@ -700,6 +712,10 @@ video {
   height: 4rem;
 }
 
+.h-2{
+  height: 0.5rem;
+}
+
 .h-4{
   height: 1rem;
 }
@@ -740,6 +756,10 @@ video {
   height: 100%;
 }
 
+.max-h-\[200px\]{
+  max-height: 200px;
+}
+
 .min-h-\[130px\]{
   min-height: 130px;
 }
@@ -758,6 +778,10 @@ video {
 
 .w-16{
   width: 4rem;
+}
+
+.w-2{
+  width: 0.5rem;
 }
 
 .w-36{
@@ -786,6 +810,10 @@ video {
 
 .w-\[120px\]{
   width: 120px;
+}
+
+.w-\[220px\]{
+  width: 220px;
 }
 
 .w-\[60\%\]{
@@ -818,6 +846,10 @@ video {
   width: max-content;
 }
 
+.max-w-\[220px\]{
+  max-width: 220px;
+}
+
 .max-w-\[400px\]{
   max-width: 400px;
 }
@@ -836,6 +868,18 @@ video {
 
 .max-w-\[700px\]{
   max-width: 700px;
+}
+
+.max-w-\[60px\]{
+  max-width: 60px;
+}
+
+.max-w-\[70px\]{
+  max-width: 70px;
+}
+
+.max-w-\[750px\]{
+  max-width: 750px;
 }
 
 .flex-1{
@@ -868,6 +912,21 @@ video {
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping{
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+.cursor-auto{
+  cursor: auto;
 }
 
 .cursor-pointer{
@@ -948,6 +1007,10 @@ video {
   overflow-x: auto;
 }
 
+.overflow-y-auto{
+  overflow-y: auto;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -966,6 +1029,10 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .border{
@@ -1022,6 +1089,10 @@ video {
   background-color: rgb(244 63 94 / var(--tw-bg-opacity));
 }
 
+.bg-secondary\/20{
+  background-color: rgb(254 170 196 / 0.2);
+}
+
 .bg-transparent{
   background-color: transparent;
 }
@@ -1039,6 +1110,11 @@ video {
   background-color: rgb(255 255 255 / 0.6);
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1047,6 +1123,10 @@ video {
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .p-6{
@@ -1263,6 +1343,16 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -1353,6 +1443,21 @@ textarea{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.custom-scroll::-webkit-scrollbar{
+  width: 5px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb{
+  width: 5px;
+  border-radius: 0.5rem;
+  background-color: transparent;
+}
+
+.custom-scroll:hover::-webkit-scrollbar-thumb{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .spinner {
@@ -1643,7 +1748,8 @@ textarea{
   padding-right: 1rem;
 }
 
-.menu-size{
+.menu-size,
+.addons{
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1661,7 +1767,12 @@ textarea{
   transition-duration: 150ms;
 }
 
-.menu-size.active{
+.addons{
+  font-size: 10px;
+}
+
+.menu-size.active,
+.addons.active{
   --tw-bg-opacity: 1;
   background-color: rgb(254 239 241 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
