--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -870,14 +870,6 @@ video {
   max-width: 700px;
 }
 
-.max-w-\[60px\]{
-  max-width: 60px;
-}
-
-.max-w-\[70px\]{
-  max-width: 70px;
-}
-
 .max-w-\[750px\]{
   max-width: 750px;
 }
@@ -1110,11 +1102,6 @@ video {
   background-color: rgb(255 255 255 / 0.6);
 }
 
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1296,6 +1283,10 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[11px\]{
+  font-size: 11px;
 }
 
 .font-bold{
